# tool-geophysical-interpretation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: commands.cpp  commands.h
core/datatypes/: GPSMeasurement.h  geoCoordinate.h  magneticMeasurement.h  measurementPoint.h  referenceReliefPoint.h
core/models/: GPSMeasurementModel.cpp  GPSMeasurementModel.h  magneticMeasurementModel.cpp  magneticMeasurementModel.h  referenceReliefModel.cpp  referenceReliefModel.h
core/spatial/: GPSSpatialDataAdapter.cpp  GPSSpatialDataAdapter.h  abstractSpatialDataAdapter.h  magneticSpatialDataAdapter.cpp  magneticSpatialDataAdapter.h  spatialPoint.h
core/storage/: dataStorage.cpp  dataStorage.h
core/utils/: commands.cpp
ui/: mainWidget.cpp  mainWidget.h
ui/views/mapViews/: GPSHeatMapWidget.cpp  GPSHeatMapWidget.h  abstractHeatMapWidget.cpp  abstractHeatMapWidget.h  magneticHeatMapWidget.cpp  magneticHeatMapWidget.h
